objects/Fridge_Reading_Daily_History__c.object
<CustomObject><fields>
        <fullName>DeviceId__c</fullName>
        <label>DeviceId</label>
        <length>16</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>Door__c</fullName>
        <label>Door</label>
        <length>9</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>Humidity__c</fullName>
        <label>Humidity</label>
        <precision>6</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Temperature__c</fullName>
        <label>Temperature</label>
        <precision>6</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>ts__c</fullName>
        <label>ts</label>
        <required>true</required>
        <type>DateTime</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>false</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>false</enableSharing><enableStreamingApi>false</enableStreamingApi><label>Fridge Reading Daily History</label><nameField>
        <displayFormat>FR-{000000}</displayFormat>
        <label>Fridge Reading Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Fridge Readings Daily History</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>